--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
   node: circleci/node@5.0.2
-  eb: circleci/aws-elastic-beanstalk@2.0.1
+  # eb: circleci/aws-elastic-beanstalk@2.0.1
   aws-cli: circleci/aws-cli@3.1.1
   # different jobs are calles later in the workflows sections
 jobs:
@@ -12,10 +12,10 @@ jobs:
       - image: "cimg/base:stable"
     steps:
       - node/install:
-          node-version: "16.13"
+          node-version: "14.15"
       - checkout
       - aws-cli/setup
-      - eb/setup
+      # - eb/setup
       - run:
           name: Install Back-End Dependencies
           command: 'npm run backend:install'
