--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,12 @@ jobs:
       - checkout
       - aws-cli/setup
       # - eb/setup
-      - run:
-          name: Install Back-End Dependencies
-          command: 'npm run backend:install'
-      - run:
-          name: Back-End Build
-          command: 'npm run backend:build'
+      # - run:
+      #     name: Install Back-End Dependencies
+      #     command: 'npm run backend:install'
+      # - run:
+      #     name: Back-End Build
+      #     command: 'npm run backend:build'
       - run:
           name: Install Front-End Dependencies
           command: 'npm run frontend:install'
