--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
   node: circleci/node@5.0.2
-  # eb: circleci/aws-elastic-beanstalk@2.0.1
+  eb: circleci/aws-elastic-beanstalk@2.0.1
   aws-cli: circleci/aws-cli@3.1.1
   # different jobs are calles later in the workflows sections
 jobs:
@@ -15,25 +15,25 @@ jobs:
           node-version: "14.15"
       - checkout
       - aws-cli/setup
-      # - eb/setup
-      # - run:
-      #     name: Install Back-End Dependencies
-      #     command: 'npm run backend:install'
-      # - run:
-      #     name: Back-End Build
-      #     command: 'npm run backend:build'
+      - eb/setup
+      - run:
+          name: Install Back-End Dependencies
+          command: 'npm run backend:install'
+      - run:
+          name: Back-End Build
+          command: 'npm run backend:build'
       - run:
           name: Install Front-End Dependencies
           command: 'npm run frontend:install'
       - run:
           name: Front-End Build
           command: 'npm run frontend:build'
-      # - run:
-      #     name: Deploy Backend
-      #     command: 'npm run backend:deploy'
-      # - run:
-      #     name: Deploy Frontend
-      #     command: 'npm run frontend:deploy'
+      - run:
+          name: Deploy Backend
+          command: 'npm run backend:deploy'
+      - run:
+          name: Deploy Frontend
+          command: 'npm run frontend:deploy'
 workflows:
   version: 2.1
   build:
