--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -13,7 +13,7 @@
     "dev": "npx ts-node-dev --respawn --transpile-only ./src/server.ts",
     "prod": "npx tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
-    "deploy": "npm run build && eb init Udagram-api1 --region us-east-1 && eb use Udagram-api1-dev && eb deploy Udagram-api1-dev",
+    "deploy": "chmod +x ./bin/deploy.sh && ./bin/deploy.sh",
     "build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
