--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.ts",
   "engines": {
-    "node": ">=14.15"
+    "node": "14.15"
   },
   "scripts": {
     "start": "node ./www/server.js",
