--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,8 @@ jobs:
       # the base image can run most needed actions with orbs
       - image: "cimg/base:stable"
     steps:
-      - node/install
+      - node/install:
+          node-version: "14.15"
       - checkout
       - aws-cli/setup
       - eb/setup
