--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,36 +9,61 @@ jobs:
   build:
     docker:
       # the base image can run most needed actions with orbs
-      - image: "cimg/base:stable"
+      - image: 'cimg/node:14.15'
     steps:
+      # install node and checkout code
       - node/install:
-          node-version: "14.15"
+          node-version: '14.15'
       - checkout
-      - aws-cli/setup
-      - eb/setup
-      - run:
-          name: Install Back-End Dependencies
-          command: 'npm run backend:install'
-      - run:
-          name: Back-End Build
-          command: 'npm run backend:build'
+      # Use root level package.json to install dependencies in the frontend app
       - run:
           name: Install Front-End Dependencies
-          command: 'npm run frontend:install'
+          command: |
+            npm run frontend:install
+      # TODO: Install dependencies in the the backend API
+      - run:
+          name: Install API Dependencies
+          command: |
+            npm run api:install
+      # TODO: Build the frontend app
       - run:
           name: Front-End Build
-          command: 'npm run frontend:build'
+          command: |
+            npm run frontend:build
+      # TODO: Build the backend API
       - run:
-          name: Deploy Backend
-          command: 'npm run backend:deploy'
+          name: API Build
+          command: |
+            npm run api:build
+  # deploy step will run only after manual approval
+  deploy:
+    docker:
+      - image: 'cimg/base:stable'
+      # more setup needed for aws, node, elastic beanstalk
+    steps:
+      - node/install:
+          node-version: '14.15'
+      - eb/setup
+      - aws-cli/setup
+      - checkout
       - run:
-          name: Deploy Frontend
-          command: 'npm run frontend:deploy'
+          name: Deploy App
+          # TODO: Install, build, deploy in both apps
+          command: |
+            npm run deploy
+
 workflows:
-  version: 2.1
-  build:
+  udagram:
     jobs:
-      - build:
+      - build
+      - hold:
           filters:
             branches:
-              only: main
+              only:
+                - main
+          type: approval
+          requires:
+            - build
+      - deploy:
+          requires:
+            - hold
