--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     docker:
       # the base image can run most needed actions with orbs
-      - image: 'cimg/node:14.15'
+      - image: 'cimg/base:stable'
     steps:
       # install node and checkout code
       - node/install:
@@ -24,7 +24,7 @@ jobs:
       - run:
           name: Install API Dependencies
           command: |
-            npm run api:install
+            npm run backend:install
       # TODO: Build the frontend app
       - run:
           name: Front-End Build
@@ -34,7 +34,7 @@ jobs:
       - run:
           name: API Build
           command: |
-            npm run api:build
+            npm run backend:build
   # deploy step will run only after manual approval
   deploy:
     docker:
