--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
         "backend:install": "cd udagram/udagram-api && npm install .",
         "backend:build": "cd udagram/udagram-api && npm run build",
         "backend:deploy": "cd udagram/udagram-api && npm run deploy",
-        "deploy": "npm run api:deploy && npm run frontend:deploy"
+        "deploy": "npm run backend:deploy && npm run frontend:deploy"
     }
 }
